2014-06-30  Per Bothner  <per@bothner.com>

	* PrimProcedure.java (compileArgs): Fix thinko re array type.

	* ModuleInfo.java (setCompilation): Make sure filename is non-null.

	* InlineCalls.java (checkType): On type error, if type is PrimType,
	convert it to a boxed type to force a run-time exception.
	* Compilation.java (makeCoercion): Change return type to ApplyExp.

2014-06-29  Per Bothner  <per@bothner.com>

	* LambdaExp.java (class Closure): Change to a static member class.

2014-06-28  Per Bothner  <per@bothner.com>

	* Declaration.java (getAnnotation *2): New method.
	* LambdaExp.java (compileSetField): Emit field annotations.
	(compileAsMethod): Emit method annotations.

2014-06-25  Per Bothner  <per@bothner.com>

	* LambdaExp.java (allocFieldFor): Only reuse nameDecl's field if
	this LambdaExp is the only value of the nameDecl.

2014-06-16  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (comp): Make field private.
	(setCompilation):  Allow setting to null.
	(getModuleExp): comp is always null if m is.
	* ModuleManager.java (find): Simplify to use setCompilation.
	* Compilation.java (cleanupAfterCompilation):
	Use ModileInfo#setCompilation.
	* ModuleExp.java: Use getCompilation.

2014-06-04  Per Bothner  <per@bothner.com>

	* LambdaExp.java (PUBLIC_METHOD): New field.
	(addMethodFor): Use PUBLIC_METHOD.

	* GenericProc.java (add(MethodProc[])): Rename unused method to addAll.

	* LambdaExp.java (compile): Don't create field if in dumpInitializers.
	* Compilation.java (dumpingInitializers): New field.
	(dumpInitializers): Set dumpingInitializers.
	* ProcInitializer.java (emitLoadModuleMethod): Handle the case
	that moduleInstanceVar might be dead.

2014-05-26  Per Bothner  <per@bothner.com>

	* ApplyExp.java (compile): Re-throw if exception when inlining.

	* ApplyExp.java (createArray): Moved to CompileArrays.

2014-05-24  Per Bothner  <per@bothner.com>

	* ApplyExp.java (adjustSplice, spliceCount, isSimple):
	Some splicing-related helper methods.